# FileRAII

./: CMakeLists.txt  README.md
demo/: main.cpp
include/: File.hpp
src/: File.cpp
